[package]
name = "MerkleTree"
version = "0.1.0"
authors = ["Vladislav Lanskikh <nothingnesstobe@gmail.com>"]
readme = "README.md"

[lib]
name="merkle_tree"

[dependencies]
rust-crypto = "^0.2"
bincode = "0.5.6"
rustc-serialize = "0.3.19"

clippy = {version = "*", optional = true}

[features]
default = []
dev = ["clippy"]